VSE: Reassigning transform strip with keyframed properties does not move keyframes #84642

Closed
opened 2021-01-12 15:24:05 +01:00 by Olivier Jolly · 7 comments

System Information
Operating system: Debian 10
Graphics card: Radeon HD 7950 + GeForce GTX 1060

Blender Version
Broken: all

Short description of error
In the VSE, when creating a transform strip and animating some properties (tested with opacity, scale, offset, rotation), and then reassigning it to a different source, the keyframes are not moving along the transform strip itself.

Exact steps for others to reproduce the error
Based on this .blend file, reassign the transform strip to the second strip. I'd expect the keyframes to be offset along with the transform strip, but they don't.blender_vse_bug_reassigned_transform_strip_dont_translate_keyframes.blend

**System Information** Operating system: Debian 10 Graphics card: Radeon HD 7950 + GeForce GTX 1060 **Blender Version** Broken: all **Short description of error** In the VSE, when creating a transform strip and animating some properties (tested with opacity, scale, offset, rotation), and then reassigning it to a different source, the keyframes are not moving along the transform strip itself. **Exact steps for others to reproduce the error** Based on this .blend file, reassign the transform strip to the second strip. I'd expect the keyframes to be offset along with the transform strip, but they don't.[blender_vse_bug_reassigned_transform_strip_dont_translate_keyframes.blend](https://archive.blender.org/developer/F9561108/blender_vse_bug_reassigned_transform_strip_dont_translate_keyframes.blend)
Author

Added subscriber: @zeograd

Added subscriber: @zeograd
Author

Adding screenshots exhibiting the issue

Capture d’écran du 2021-01-12 15-59-56.png

Capture d’écran du 2021-01-12 16-00-25.png

Adding screenshots exhibiting the issue ![Capture d’écran du 2021-01-12 15-59-56.png](https://archive.blender.org/developer/F9561145/Capture_d_écran_du_2021-01-12_15-59-56.png) ![Capture d’écran du 2021-01-12 16-00-25.png](https://archive.blender.org/developer/F9561146/Capture_d_écran_du_2021-01-12_16-00-25.png)
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can reproduce this on 2.92.0 Alpha, branch: master, commit date: 2021-01-12 15:24, hash: 957e292c58.

I can reproduce this on 2.92.0 Alpha, branch: master, commit date: 2021-01-12 15:24, hash: `957e292c58`.

This issue was referenced by a9203e25a2

This issue was referenced by a9203e25a2e1f1489b8a3705f8883cdd86f094c7
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Falk David self-assigned this 2021-01-19 12:31:27 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84642
No description provided.